MPSA - 3
+ Added textures and removed them from MPS
~ Fix for some MPS changes in 1.5.1

MPSA - 2
+ Added Magnet Module
~ Migrated more code

MPSA - 1
+ Transferred modules over from MPS
	*Auto-feeder
	*Solar Generator
	*Kinetic Generator
	*Portable Crafting Table
+ Added two new components: Solar Panel and Magnet
~ Migrated quite a lot of code from MPS