@@ -6,6 +6,7 @@ import net.machinemuse.api.IModularItem;
 import net.machinemuse.api.ModuleManager;
 import net.machinemuse.api.MuseCommonStrings;
 import net.machinemuse.api.MuseItemUtils;
+import net.machinemuse.api.electricity.ElectricItemUtils;
 import net.machinemuse.api.moduletrigger.IPlayerTickModule;
 import net.machinemuse.api.moduletrigger.IRightClickModule;
 import net.machinemuse.api.moduletrigger.IToggleableModule;
@@ -14,21 +15,24 @@ import net.machinemuse.powersuits.powermodule.PowerModuleBase;
 import net.minecraft.block.Block;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.inventory.IInventory;
+import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
+import net.minecraft.util.Icon;
 import net.minecraft.world.World;
 import andrew.powersuits.common.AddonUtils;
 
 public class TorchPlacerModule extends PowerModuleBase implements IToggleableModule, IPlayerTickModule, IRightClickModule {
 	public static final String MODULE_TORCH_PLACER = "Torch Placer";
-	public static final String TORCH_ENERGY_CONSUMPTION = "Torch Fabrication Energy Consumption";
+	public static final String TORCH_ENERGY_CONSUMPTION = "Torch Placement Energy Consumption";
 	public static final String MAX_TORCH_STORAGE = "Maximum Storage Amount";
+	public static final ItemStack torch = new ItemStack(Block.blockGold);
 	public TorchPlacerModule(List<IModularItem> validItems) {
 		super(validItems);
 		addBaseProperty(TORCH_ENERGY_CONSUMPTION, 50);
 		addBaseProperty(MAX_TORCH_STORAGE, 64);
 		addTradeoffProperty("Storage", MAX_TORCH_STORAGE, 192);
 		addTradeoffProperty("Storage", TORCH_ENERGY_CONSUMPTION, 450);
-		addInstallCost(new ItemStack(Block.torchWood, 1));
+		addInstallCost(MuseItemUtils.copyAndResize(ItemComponent.controlCircuit, 1));
 	    addInstallCost(MuseItemUtils.copyAndResize(ItemComponent.servoMotor, 2));
 	}
 	
@@ -39,7 +43,7 @@ public class TorchPlacerModule extends PowerModuleBase implements IToggleableMod
 
 	@Override
 	public String getCategory() {
-		return MuseCommonStrings.CATEGORY_TOOL;
+		return MuseCommonStrings.CATEGORY_SPECIAL;
 	}
 
 	@Override
@@ -49,7 +53,7 @@ public class TorchPlacerModule extends PowerModuleBase implements IToggleableMod
 
 	@Override
 	public String getDescription() {
-		return "Stored torches in an internal storage and places them in the world on use.";
+		return "Stores torches in an internal storage and places them in the world on use.";
 	}
 
 	@Override
@@ -68,7 +72,7 @@ public class TorchPlacerModule extends PowerModuleBase implements IToggleableMod
 							player.inventory.setInventorySlotContents(i, null);
 						}
 					}
-					player.sendChatToPlayer("Torches: "+AddonUtils.getTorchLevel(item));
+					player.sendChatToPlayer("[MPSA] Ate some torches. Torch level: "+AddonUtils.getTorchLevel(item)+"/"+(int)ModuleManager.computeModularProperty(item, MAX_TORCH_STORAGE));
 				}
 			}
 		}
@@ -78,13 +82,27 @@ public class TorchPlacerModule extends PowerModuleBase implements IToggleableMod
 	public void onPlayerTickInactive(EntityPlayer player, ItemStack item) {}
 
 	@Override
-	public void onRightClick(EntityPlayer playerClicking, World world, ItemStack item) {
-		
-	}
+	public void onRightClick(EntityPlayer playerClicking, World world, ItemStack item) {}
 
 	@Override
 	public void onItemUse(ItemStack itemStack, EntityPlayer player, World world, int x, int y, int z, int side, float hitX, float hitY, float hitZ) {
-		
+		if (AddonUtils.getTorchLevel(itemStack) > 0) {
+			if ((player.canPlayerEdit(x, y, z, side, itemStack)) && (Block.blocksList[Block.torchWood.blockID].canPlaceBlockAt(world, x, y, z))) {
+				int block = world.getBlockId(x,  y, z);
+				if ((block != Block.vine.blockID) && (block != Block.tallGrass.blockID) && (block != Block.deadBush.blockID) && ((Block.blocksList[block] == null) || (!Block.blocksList[block].isBlockReplaceable(world, x, y, z)))) {
+					x += (side == 5 ? 1 : side == 4 ? -1 : 0);
+				    y += (side == 1 ? 1 : side == 0 ? -1 : 0);
+				    z += (side == 3 ? 1 : side == 2 ? -1 : 0);
+				}
+				world.setBlock(x, y, z, Block.torchWood.blockID, getMetaForTorch(world, x, y, z, side), 2);
+				Block.blocksList[Block.torchWood.blockID].onBlockAdded(world, x, y, z);
+				AddonUtils.setTorchLevel(itemStack, AddonUtils.getTorchLevel(itemStack)-1);
+				ElectricItemUtils.drainPlayerEnergy(player, ModuleManager.computeModularProperty(itemStack, TORCH_ENERGY_CONSUMPTION));
+			}
+		}
+		else {
+			player.sendChatToPlayer("[MPSA] No torches!");
+		}
 	}
 
 	@Override
@@ -93,8 +111,9 @@ public class TorchPlacerModule extends PowerModuleBase implements IToggleableMod
 	}
 
 	@Override
-	public void onPlayerStoppedUsing(ItemStack itemStack, World world, EntityPlayer player, int par4) {
-		
-	}
+	public void onPlayerStoppedUsing(ItemStack itemStack, World world, EntityPlayer player, int par4) {}
 	
+	public int getMetaForTorch(World world, int x, int y, int z, int side) {
+		return Block.blocksList[Block.torchWood.blockID].onBlockPlaced(world, x, y, z, side, x, y, z, 0);
+	}
 }
