@@ -1,3 +1,7 @@
+MPSA - 4
++ Added torch placing module
+~ Cleaned up some code
+
 MPSA - 3
 + Added textures and removed them from MPS
 ~ Fix for some MPS changes in 1.5.1
